lab02-mtls-envoy/envoy-client-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-client-config
  namespace: spiffe-mtls
data:
  envoy.yaml: |
    node:
      id: spiffe-client
      cluster: spiffe-mtls

    static_resources:
      listeners:
      - name: outbound_http
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 15001
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: mtls_server
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: mtls_server
        connect_timeout: 1s
        type: STRICT_DNS
        load_assignment:
          cluster_name: mtls_server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: spiffe-server.spiffe-mtls.svc.cluster.local
                    port_value: 8443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: spiffe-server.spiffe-mtls.svc.cluster.local
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: default
                sds_config:
                  resource_api_version: V3
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: spire_agent
              validation_context_sds_secret_config:
                name: ROOTCA
                sds_config:
                  resource_api_version: V3
                  api_config_source:
                    api_type: GRPC
                    transport_api_version: V3
                    grpc_services:
                    - envoy_grpc:
                        cluster_name: spire_agent

      - name: spire_agent
        connect_timeout: 1s
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: spire_agent
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: /run/spire/sockets/spire-agent.sock

    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901
